--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.5.2",
     "react-player": "^3.0.0",
     "react-router-dom": "^7.6.3",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
